fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ main {
   max-width: 80rem;
   margin: 0 auto;
   border-radius: 2rem;
-  max-height: 35em;
+  max-height: 37em;
   gap: 1em;
 }
 
